Re-generate latest API-access code via swagger-codegen
