# src/app/swagger/api/ImageApi.ts
@@ -80,23 +80,6 @@ export class ImageApi {
 
     /**
      * 
-     * @summary Generates an upload-URL for the path
-     * @param libraryId ID of the library
-     * @param treePath directory path to upload to
-     */
-    public generateImageUpload(libraryId: number, treePath: string, extraHttpRequestParams?: any): Observable<models.InlineResponse2002> {
-        return this.generateImageUploadWithHttpInfo(libraryId, treePath, extraHttpRequestParams)
-            .map((response: Response) => {
-                if (response.status === 204) {
-                    return undefined;
-                } else {
-                    return response.json() || {};
-                }
-            });
-    }
-
-    /**
-     * 
      * @summary Load image for path
      * @param libraryId ID of the library
      * @param treePath Image path to load
@@ -121,6 +104,24 @@ export class ImageApi {
      */
     public updateImage(libraryId: number, treePath: string, body: models.Image, extraHttpRequestParams?: any): Observable<models.Image> {
         return this.updateImageWithHttpInfo(libraryId, treePath, body, extraHttpRequestParams)
+            .map((response: Response) => {
+                if (response.status === 204) {
+                    return undefined;
+                } else {
+                    return response.json() || {};
+                }
+            });
+    }
+
+    /**
+     * 
+     * @summary Upload an image to the path
+     * @param libraryId ID of the library
+     * @param treePath directory path to upload to
+     * @param file the file to upload
+     */
+    public uploadImage(libraryId: number, treePath: string, file: any, extraHttpRequestParams?: any): Observable<models.Image> {
+        return this.uploadImageWithHttpInfo(libraryId, treePath, file, extraHttpRequestParams)
             .map((response: Response) => {
                 if (response.status === 204) {
                     return undefined;
@@ -237,50 +238,6 @@ export class ImageApi {
     }
 
     /**
-     * Generates an upload-URL for the path
-     * 
-     * @param libraryId ID of the library
-     * @param treePath directory path to upload to
-     */
-    public generateImageUploadWithHttpInfo(libraryId: number, treePath: string, extraHttpRequestParams?: any): Observable<Response> {
-        const path = this.basePath + '/library/${libraryId}/generateImageUpload/${treePath}'
-                    .replace('${' + 'libraryId' + '}', String(libraryId))
-                    .replace('${' + 'treePath' + '}', String(treePath));
-
-        let queryParameters = new URLSearchParams();
-        let headers = new Headers(this.defaultHeaders.toJSON()); // https://github.com/angular/angular/issues/6845
-        // verify required parameter 'libraryId' is not null or undefined
-        if (libraryId === null || libraryId === undefined) {
-            throw new Error('Required parameter libraryId was null or undefined when calling generateImageUpload.');
-        }
-        // verify required parameter 'treePath' is not null or undefined
-        if (treePath === null || treePath === undefined) {
-            throw new Error('Required parameter treePath was null or undefined when calling generateImageUpload.');
-        }
-        // to determine the Content-Type header
-        let consumes: string[] = [
-        ];
-
-        // to determine the Accept header
-        let produces: string[] = [
-            'application/json'
-        ];
-
-        let requestOptions: RequestOptionsArgs = new RequestOptions({
-            method: RequestMethod.Get,
-            headers: headers,
-            search: queryParameters,
-            withCredentials:this.configuration.withCredentials
-        });
-        // https://github.com/swagger-api/swagger-codegen/issues/4037
-        if (extraHttpRequestParams) {
-            requestOptions = (<any>Object).assign(requestOptions, extraHttpRequestParams);
-        }
-
-        return this.http.request(path, requestOptions);
-    }
-
-    /**
      * Load image for path
      * 
      * @param libraryId ID of the library
@@ -365,6 +322,68 @@ export class ImageApi {
             method: RequestMethod.Put,
             headers: headers,
             body: body == null ? '' : JSON.stringify(body), // https://github.com/angular/angular/issues/10612
+            search: queryParameters,
+            withCredentials:this.configuration.withCredentials
+        });
+        // https://github.com/swagger-api/swagger-codegen/issues/4037
+        if (extraHttpRequestParams) {
+            requestOptions = (<any>Object).assign(requestOptions, extraHttpRequestParams);
+        }
+
+        return this.http.request(path, requestOptions);
+    }
+
+    /**
+     * Upload an image to the path
+     * 
+     * @param libraryId ID of the library
+     * @param treePath directory path to upload to
+     * @param file the file to upload
+     */
+    public uploadImageWithHttpInfo(libraryId: number, treePath: string, file: any, extraHttpRequestParams?: any): Observable<Response> {
+        const path = this.basePath + '/library/${libraryId}/uploadImage/${treePath}'
+                    .replace('${' + 'libraryId' + '}', String(libraryId))
+                    .replace('${' + 'treePath' + '}', String(treePath));
+
+        let queryParameters = new URLSearchParams();
+        let headers = new Headers(this.defaultHeaders.toJSON()); // https://github.com/angular/angular/issues/6845
+        let formParams = new URLSearchParams();
+
+        // verify required parameter 'libraryId' is not null or undefined
+        if (libraryId === null || libraryId === undefined) {
+            throw new Error('Required parameter libraryId was null or undefined when calling uploadImage.');
+        }
+        // verify required parameter 'treePath' is not null or undefined
+        if (treePath === null || treePath === undefined) {
+            throw new Error('Required parameter treePath was null or undefined when calling uploadImage.');
+        }
+        // verify required parameter 'file' is not null or undefined
+        if (file === null || file === undefined) {
+            throw new Error('Required parameter file was null or undefined when calling uploadImage.');
+        }
+        // to determine the Content-Type header
+        let consumes: string[] = [
+            'multipart/form-data',
+            'image/jpeg',
+            'image/gif',
+            'image/png'
+        ];
+
+        // to determine the Accept header
+        let produces: string[] = [
+            'application/json'
+        ];
+
+        headers.set('Content-Type', 'application/x-www-form-urlencoded');
+
+        if (file !== undefined) {
+            formParams.set('file', <any>file);
+        }
+
+        let requestOptions: RequestOptionsArgs = new RequestOptions({
+            method: RequestMethod.Post,
+            headers: headers,
+            body: formParams.toString(),
             search: queryParameters,
             withCredentials:this.configuration.withCredentials
         });
